Fixed safe area on mobile

--- a/src/app.css
+++ b/src/app.css
@@ -18,3 +18,7 @@
 }
 
 @custom-variant dark (&:where(.dark, .dark *));
+
+.safe-container {
+  padding-bottom: env(safe-area-inset-bottom);
+}
